Z-index fixed

--- a/src/Components/News/News.css
+++ b/src/Components/News/News.css
@@ -47,6 +47,10 @@
     margin: 5px 0;
 }
 
+.news-text .DraftEditor-editorContainer {
+    z-index: 0;
+}
+
 .overlay {
     width: 100%;
     height: 100%;
